record the highest score for leader board